--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -294,7 +294,7 @@
 
 /* ========== CTA SECTION ========== */
 .about-cta {
-  background: #ff6600;
+  background: #ff6600;  
   padding: 70px 6vw;
   text-align: center;
 }
@@ -329,14 +329,14 @@
 }
 
 .btn-primary {
-  background: #fff;
+  background-color: #fff;
   color: #ff6600;
   border: 2px solid #fff;
 }
 
 .btn-outline {
-  background: transparent;
-  color: #fff;
+ /* background-color: #fff !important; */
+  color: #ffffff !important;
   border: 2px solid #fff;
 }
 
@@ -347,7 +347,7 @@
 
 .btn-outline:hover {
   background: #fff;
-  color: #ff6600;
+  color: #ff6600 !important;
   transform: translateY(-2px);
 }
 
