--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -318,34 +318,35 @@
   flex-wrap: wrap;
 }
 
-.btn-primary,
-.btn-outline {
+.btn-primary1,
+.btn-outline1 {
   padding: 14px 32px;
   font-weight: 600;
   border-radius: 8px;
   cursor: pointer;
   transition: all 0.25s;
   font-size: 1rem;
+  text-decoration: none !important;
 }
 
-.btn-primary {
+.btn-primary1 {
   background-color: #fff;
   color: #ff6600;
   border: 2px solid #fff;
 }
 
-.btn-outline {
+.btn-outline1 {
  /* background-color: #fff !important; */
   color: #ffffff !important;
   border: 2px solid #fff;
 }
 
-.btn-primary:hover {
+.btn-primary1:hover {
   background: #f8f9fa;
   transform: translateY(-2px);
 }
 
-.btn-outline:hover {
+.btn-outline1:hover {
   background: #fff;
   color: #ff6600 !important;
   transform: translateY(-2px);
